static/css/style.css
@keyframes slideInLeft {
  0% {
    opacity: 0;
    transform: translateX(-300px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideInRight {
  0% {
    opacity: 0;
    transform: translateX(300px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.navbar {
  box-shadow: 0 5px 5px -5px rgba(0,0,0,.5);
  -webkit-box-shadow: 0 5px 5px -5px rgba(0,0,0,.5);

}
.nav-link {
  color: #343a40;
}
.full-vh {
  height: 100vh;
}
.nav-item .active{
  font-weight: 400;
}
.section {
  margin: 0;
  padding: 50px 0 0 0;
  text-align: center;
}

.display-5 {
  font-size: 2.3rem;
  font-weight: 300;
  line-height: 1.2;
}

.display-6 {
  font-size: 1.5rem;
  font-weight: 300;
  line-height: 1.2;
}
.header-bar{
  width: 80px;
  height: 4px;
}
.blast{
  display: inline-block;
}
#about .blast, #about p {
  opacity: 0;
  display: inline-block;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}
.section__hero {
  background: url(../images/hero-bg-8.jpg) center bottom no-repeat;
  -webkit-background-size: auto auto;
  -moz-background-size: auto auto;
  -o-background-size: auto auto;
  background-size: auto auto;
  padding: 150px 0 0 0;
  text-align: left;
}

@media (max-width: 991px){
  html {
    font-size: 12px;
  }
}

@media (max-width: 767px){
  html {
    font-size: 11px;
  }
}

@media (max-width: 575px){
  html {
    font-size: 10px;
  }

  .section__hero {
    background-position: calc(50% - 50px) 50%;
  }
}
@media screen and (min-width:320px) and (max-width:767px) and (orientation:landscape) {
  .section {
    padding: 70px 0 0 0;
  }
}

